--- a/website/slides/week1.qmd
+++ b/website/slides/week1.qmd
@@ -1,64 +1,29 @@
 ---
 title: "Welcome!"
 subtitle: "PM 566: Introduction to Health Data Science"
-format: "beamer"
+format:
+  revealjs:
+    fig-width: 7
+    fig-align: center
 ---
 
-```{r include=FALSE}
-library(knitr)
-hook_output <- knit_hooks$get("output")
-knit_hooks$set(output = function(x, options) {
-  lines <- options$output.lines
-  if (is.null(lines)) {
-    return(hook_output(x, options))  # pass to default hook
-  }
-  x <- unlist(strsplit(x, "\n"))
-  more <- "..."
-  if (length(lines) == 1) {        # first n lines
-    if (length(x) > lines) {
-      # truncate the output, but add ....
-      x <- c(head(x, lines), more)
-    }
-  } else {
-    x <- c(more, x[lines], more)
-  }
-  # paste these lines together
-  x <- paste(c(x, ""), collapse = "\n")
-  hook_output(x, options)
-})
-knit_hooks$set(output = function(x, options) {
-  # this hook is used only when the linewidth option is not NULL
-  if (!is.null(n <- options$linewidth)) {
-    x = knitr:::split_lines(x)
-    # any lines wider than n should be wrapped
-    if (any(nchar(x) > n)) x = strwrap(x, width = n)
-    x = paste(x, collapse = '\n')
-  }
-  hook_output(x, options)
-})
-
-opts_chunk$set(
-  echo = TRUE,
-  fig.width = 7, 
-  fig.align = 'center',
-  fig.asp = 0.618, # 1 / phi
-  out.width = "700px")
-```
 
 
 # Instructor
 
-- Kim Siegmund
+Kelly Street
 
+- Assistant Professor of Biostatistics
+- Department of Population and Public Health Sciences
 
 
 ---
 
-# Blackboard + Website
+# Brightspace + Website
 
 https://github.com/USCbiostats/PM566  
 Official class website
-Syllabus, reading materials, slides, labs and assignments
+Syllabus, reading materials, slides, labs, and assignments
 
 https://blackboard.usc.edu/  
 Announcements + Grading
@@ -83,16 +48,13 @@ collection of knowledge about
 
 --
 
-.center[
-![](img/data-science.png)
-]
+
+![](img/data-science.png){fig-align="center"}
 
 ---
 
-<figure align="center">
-<img src="img/data-science-drew-conway.jpg" style="width:600px">
-<figcaption>Source: https://berkeleysciencereview.com/2013/07/how-to-become-a-data-scientist-before-you-graduate/ Original by Drew Conway.</figcaption>
-</figure>
+![](img/data-science-drew-conway.jpg){fig-align="center"}
+
 
 ---
 
@@ -101,15 +63,6 @@ collection of knowledge about
 <figure align="center">
 <img src="https://imgs.xkcd.com/comics/regular_expressions.png" style="width:450px">
 <figcaption>Source: https://xkcd.com/208/</figcaption>
-</figure>
-
----
-
-# With great power comes great responsibility
-
-<figure align="center">
-<img src="https://imgs.xkcd.com/comics/extrapolating.png" style="width:500px">
-<figcaption>Fuente: https://xkcd.com/605/</figcaption>
 </figure>
 
 ---
@@ -130,7 +83,7 @@ This course is a introduction to the world of data science with a focus on appli
 
 --
 
-The course will teach language agnostic skills that are easily transferable, with examples done in R.
+The course will teach data science skills that are easily transferable, with examples done in R.
 
 --
 
@@ -138,12 +91,22 @@ You can use any language/tool you prefer. But we can only guarantee help if you 
 
 ---
 
+# What ISN'T this course?
+
+This is not a formal statistics class. You will not be expected to know or use:
+
+- parametric distributions
+- hypothesis tests
+- p values
+
+
+---
+
 # What is R?
 
 <img src="https://www.r-project.org/logo/Rlogo.svg" width="150px" alt="R logo">
 
-> R is a language and environment for statistical computing and graphics.
----https://r-project.org
+> R is a language and environment for statistical computing and graphics: https://r-project.org
 
 Created by statisticians for statisticians.
 
@@ -155,26 +118,23 @@ Over 16,000 packages added to CRAN
 
 <img src="https://rstudio.com/wp-content/uploads/2018/10/RStudio-Logo.svg" width="400px" alt="RStudio logo">
 
-> RStudio is an integrated development environment (IDE) for R.
---- https://www.rstudio.com/products/rstudio/
+> RStudio is an integrated development environment (IDE) for R: https://www.rstudio.com/products/rstudio/
 
 ---
 
-<figure>
-<img src="moderndive-r-vs-rstudio.png" alt="motiondive R vs RStudio tweet">
-</figure>
+![](img/moderndive-r-vs-rstudio.png){fig-align="center"}
 
 ---
 
 ## R in the terminal
 
-<img src="r-command-line.png" width="600px">
+![](img/r-command-line.png){fig-align="center"}
 
 ---
 
 ## R + RStudio
 
-<img src="rstudio-now.png" width="900px">
+![](img/rstudio-now.png){fig-align="center"}
 
 ---
 
@@ -188,7 +148,7 @@ Following break we will run lab 01
 
 The lab exercises can be found at: 
 
-Website -> Schedule -> `r fontawesome::fa("chalkboard-teacher")` -> Lab Exercise
+Website -> Schedule -> `{r} fontawesome::fa("chalkboard-teacher")` -> Lab Exercise
 
 https://uscbiostats.github.io/PM566/labs/lab-01/01-lab.html
 
