--- a/website/index.qmd
+++ b/website/index.qmd
@@ -4,8 +4,11 @@ title: "Intro to PHDS"
 
 ## PM 566: Introduction to Health Data Science 
 
-**Term**: Fall 2023
+**Term**: Fall 2024
 
 **Time**: Friday 9am - 12:55pm
 
 **Location**: SSB 114
+
+[GitHub](https://github.com/USCbiostats/PM566)
+
