--- a/website/slides/week1.qmd
+++ b/website/slides/week1.qmd
@@ -16,6 +16,7 @@ Kelly Street
 
 - Assistant Professor of Biostatistics
 - Department of Population and Public Health Sciences
+- Office hours: Wednesday 2pm, SSB 202V
 
 
 ---
