--- a/website/slides/week2.qmd
+++ b/website/slides/week2.qmd
@@ -9,6 +9,12 @@ format:
     fig-align: center
 ---
 
+```{r, include=FALSE}
+library(knitr)
+opts_chunk$set(
+  echo = TRUE)
+```
+
 # Part I: Intro
 
 ---
