--- a/website/slides/week4.qmd
+++ b/website/slides/week4.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Data Visualization"
+title: "Week 4: Data Visualization"
 subtitle: "PM 566: Introduction to Health Data Science"
 format:
   revealjs:
@@ -115,40 +115,40 @@ ggplot(data = data) +
 
 ---
 
-## Data
+## Data{.smaller}
 Continuing with the weather data from last week, let's take the daily averages at each site, keeping some of the variables. Let's also create a new variable for region (east and west), categorize elevation, and create a multi-category variable for visibility for exploratory purposes.
 
 ```{r}
-# Reading the data, filtering, and replacing NAs
-met <- fread(file.path('..','..','data','met_all.gz'))
-met <- met[met$temp > -10][elev == 9999.0, elev := NA]
+# Reading the data, filtering, and replacing bad values with NAs
+met <- read.csv(file.path('..','..','data','met_all.gz'))
+met <- met[met$temp > -10, ]
+met$elev[met$elev == 9999.0] <- NA
 
 # Creating an aggregated version of the dataset
-met_avg <- met[,.(
-  temp     = mean(temp,na.rm=TRUE),
-  rh       = mean(rh,na.rm=TRUE),
-  wind.sp  = mean(wind.sp,na.rm=TRUE),
-  vis.dist = mean(vis.dist,na.rm=TRUE),
-  lat      = mean(lat),
-  lon      = mean(lon), 
-  elev     = mean(elev,na.rm=TRUE)
-), by=c("USAFID", "day")]
+library(dplyr)
+met_avg <- summarize(met,
+                     temp =     mean(temp, na.rm = TRUE),
+                     rh =       mean(rh, na.rm = TRUE),
+                     wind.sp =  mean(wind.sp, na.rm = TRUE),
+                     vis.dist = mean(vis.dist, na.rm = TRUE),
+                     lat =      mean(lat, na.rm = TRUE),
+                     lon =      mean(lon, na.rm = TRUE),
+                     elev =     mean(elev, na.rm = TRUE),
+                     .by = c(USAFID, day))
 ```
 
 ---
 
 ```{r}
-# New sets of variables using "fast" ifelse from data.table
-met_avg[, region   := fifelse(lon > -98, "east", "west")]
-met_avg[, elev_cat := fifelse(elev > 252, "high", "low")]
+# New variables using ifelse()
+met_avg$region <- ifelse(met_avg$lon > -98, "east", "west")
+met_avg$elev_cat <- ifelse(met_avg$elev > 252, "high", "low")
 
-# Using the CUT function to create categories within the ranges
-met_avg[, vis_cat  := cut(
-  x      = vis.dist,
-  breaks = c(0, 1000, 6000, 10000, Inf),
-  labels = c("fog", "mist", "haze", "clear"),
-  right  = FALSE
-)]
+# Using the cut() function to create more than 2 categories
+met_avg$vis_cat <- cut(met_avg$vis.dist,
+                       breaks = c(0, 1000, 6000, 10000, Inf),
+                       labels = c("fog", "mist", "haze", "clear"),
+                       right = FALSE)
 ```
 
 The variables we will focus on for this example are temp and rh (temperature in C and relative humidity %)
@@ -287,7 +287,7 @@ points(10:1, pch = 16, col = 2)
 Facets are particularly useful for categorical variables.
 
 ```{r, out.width='40%', warning=FALSE}
-met_avg[!is.na(region)] %>% 
+met_avg[!is.na(met_avg$region), ] %>% 
   ggplot() + 
   geom_point(mapping = aes(x = temp, y = rh, color=region)) + 
   facet_wrap(~ region, nrow = 1)
@@ -300,7 +300,7 @@ met_avg[!is.na(region)] %>%
 Or you can facet on two variables...
 
 ```{r, out.width='40%', warning=FALSE}
-met_avg[!is.na(region) & !is.na(elev_cat)] %>% 
+met_avg[!is.na(met_avg$region) & !is.na(met_avg$elev_cat), ] %>% 
   ggplot() + 
   geom_point(mapping = aes(x = temp, y = rh)) + 
   facet_grid(region ~ elev_cat)
@@ -391,7 +391,7 @@ boxplot(met_avg$temp ~ met_avg$elev_cat)
 Boxplots
 
 ```{r, out.width='40%', warning=FALSE}
-met_avg[!is.na(elev_cat)] %>% 
+met_avg[!is.na(met_avg$elev_cat), ] %>% 
   ggplot()+
   geom_boxplot(mapping=aes(x=elev_cat, y=temp, fill=elev_cat)) 
 ```
@@ -424,7 +424,7 @@ lines(10:1, col = 2, lwd = 3) # add a thick red line
 Lineplots
 
 ```{r, out.width='40%', warning=FALSE}
-ggplot(data = met_avg[elev==4113])+
+ggplot(data = met_avg[met_avg$elev==4113, ])+
  geom_line(mapping=aes(x=day, y=temp))
 ```
 
@@ -437,7 +437,7 @@ Polygons
 ```{r, out.width='40%', warning=FALSE}
 world_map <- map_data("world")
 ggplot(data = world_map, aes(x = long, y = lat, group = group)) +
-  geom_polygon(fill = "darkgray", colour = "white")
+  geom_polygon(fill = "darkgray", color = "white")
 ```
 
 ---
@@ -449,7 +449,7 @@ Polygons
 ```{r, out.width='40%', warning=FALSE}
 us_map <- map_data("state")
 ggplot(data = us_map, aes(x = long, y = lat, fill = region)) +
-  geom_polygon(colour = "white")
+  geom_polygon(color = "white")
 ```
 
 ---
@@ -473,7 +473,7 @@ knitr::include_graphics("img/geoms.png")
 Let's layer geoms
 
 ```{r warning=FALSE,out.width='40%', message=FALSE}
-met_avg[!is.na(region)] %>%
+met_avg[!is.na(met_avg$region), ] %>%
   ggplot() + 
   geom_point(mapping = aes(x = temp, y = rh, color = region))+
   geom_smooth(mapping = aes(x = temp, y = rh, linetype = region))
@@ -487,7 +487,7 @@ We can avoid repetition of aesthetics by passing a set of mappings to ggplot().
 ggplot2 will treat these mappings as global mappings that apply to each geom in the graph. 
 
 ```{r warning=FALSE,out.width='30%', message=FALSE}
-met_avg[!is.na(region)] %>%
+met_avg[!is.na(met_avg$region), ] %>%
   ggplot(mapping = aes(x = temp, y = rh, color=region, linetype=region)) +
   geom_point() + 
   geom_smooth()
@@ -500,7 +500,7 @@ met_avg[!is.na(region)] %>%
 `geom_smooth()` has options. For example if we want a linear regression line we add `method=lm`
 
 ```{r warning=FALSE,out.width='40%', message=FALSE}
-met_avg[!is.na(region)] %>%
+met_avg[!is.na(met_avg$region), ] %>%
   ggplot(mapping = aes(x = temp, y = rh, color = region, linetype = region)) +
   geom_point() + 
   geom_smooth(method = lm, se = FALSE, col = "black")
@@ -513,7 +513,7 @@ met_avg[!is.na(region)] %>%
 If you place mappings in a geom function, `ggplot2` will use these mappings to extend or overwrite the global mappings for that layer only. This makes it possible to display different aesthetics in different layers.
 
 ```{r warning=FALSE, out.width='30%', message=FALSE}
-met_avg[!is.na(region)] %>%
+met_avg[!is.na(met_avg$region), ] %>%
   ggplot(mapping = aes(x = temp, y = rh)) + 
   geom_point(mapping = aes(color = region)) + 
   geom_smooth()
@@ -527,7 +527,7 @@ met_avg[!is.na(region)] %>%
 You can use the same idea to specify different data for each layer. Here, our smooth line displays the full met dataset but the points are colored by visibilty.
 
 ```{r warning=FALSE, out.width='30%', message=FALSE}
-met_avg[!is.na(vis_cat)] %>%
+met_avg[!is.na(met_avg$vis_cat), ] %>%
   ggplot(mapping = aes(x = temp, y = rh, alpha = 0.5)) + 
   geom_point(mapping = aes(color = vis_cat)) + 
   geom_smooth(se = FALSE)
@@ -551,7 +551,7 @@ barplot(tab)
 
 ```{r warning=FALSE, out.width='40%', message=FALSE}
 met_avg %>%
-filter(!(vis_cat %in% NA)) %>% 
+filter(!is.na(met_avg$vis_cat)) %>% 
   ggplot() + 
   geom_bar(mapping = aes(x = vis_cat))
 ```
@@ -565,7 +565,7 @@ The algorithm uses a built-in statistical transformation, called a "stat", to ca
 You can over-ride the stat a geom uses to construct its plot. e.g., if we want to plpot proportions, rather than counts:
 
 ```{r warning=FALSE, out.width='40%', message=FALSE}
-met_avg[!is.na(vis_cat)] %>%
+met_avg[!is.na(met_avg$vis_cat), ] %>%
   ggplot() + 
   geom_bar(mapping = aes(x = vis_cat, y = stat(prop), group = 1))
 ```
@@ -574,12 +574,12 @@ met_avg[!is.na(vis_cat)] %>%
 
 # Coloring barcharts
 
-You can colour a bar chart using either the colour aesthetic, or, more usefully, fill:
+You can color a bar chart using either the color aesthetic, or, more usefully, fill:
 
 ```{r warning=FALSE, out.width='40%', message=FALSE}
-met_avg[!is.na(vis_cat)] %>%
+met_avg[!is.na(met_avg$vis_cat), ] %>%
   ggplot() + 
-  geom_bar(mapping = aes(x = vis_cat, colour = vis_cat, fill=vis_cat))
+  geom_bar(mapping = aes(x = vis_cat, color = vis_cat, fill=vis_cat))
 ```
 
 ---
@@ -588,7 +588,7 @@ met_avg[!is.na(vis_cat)] %>%
 More interestingly, you can fill by another variable (here, 'region'). We also show that we can change the color scale.
 
 ```{r warning=FALSE, out.width='40%', message=FALSE}
-met_avg[!is.na(vis_cat) & vis_cat != "clear"] %>%
+met_avg[!is.na(met_avg$vis_cat) & met_avg$vis_cat != "clear", ] %>%
   ggplot() + 
   geom_bar(mapping = aes(x = vis_cat, fill = region))+
   scale_fill_viridis_d() 
@@ -611,7 +611,7 @@ barplot(tab, col = c(2,4))
 `position = "dodge"` places overlapping objects directly beside one another. This makes it easier to compare individual values.
 
 ```{r warning=FALSE, out.width='40%', message=FALSE}
-met_avg[!is.na(vis_cat) & vis_cat != "clear"] %>%
+met_avg[!is.na(met_avg$vis_cat) & met_avg$vis_cat != "clear", ] %>%
   ggplot() + 
   geom_bar(mapping = aes(x = elev_cat, fill = vis_cat), position = "dodge")
 ```
@@ -623,7 +623,7 @@ met_avg[!is.na(vis_cat) & vis_cat != "clear"] %>%
 You might want to draw greater attention to the statistical transformation in your code. For example, you might use stat_summary(), which summarises the y values for each unique x value, to draw attention to the summary that you're computing:
 
 ```{r warning=FALSE, out.width='30%', message=FALSE}
-l <- met_avg[!is.na(vis_cat) & vis_cat != "clear"] %>%
+l <- met_avg[!is.na(met_avg$vis_cat) & met_avg$vis_cat != "clear", ] %>%
   ggplot() + 
     stat_summary(mapping = aes(x = vis_cat, y = temp),
     fun.min = min,
@@ -730,7 +730,7 @@ bar + coord_polar()
 ## Modifying labels
 
 ```{r warning=FALSE, out.width='40%', message=FALSE}
-ggplot(met_avg[!is.na(region)]) +
+ggplot(met_avg[!is.na(met_avg$region), ]) +
   geom_point(aes(temp, rh, color = region)) + 
   labs(title = "Weather Station Data") + 
   labs(x = expression("Temperature" *~ degree * C), y = "Relative Humidity")
@@ -741,7 +741,7 @@ ggplot(met_avg[!is.na(region)]) +
 ## Changing the Theme
 
 ```{r warning=FALSE, out.width='40%', message=FALSE}
-ggplot(met_avg[!is.na(region)]) +
+ggplot(met_avg[!is.na(met_avg$region), ]) +
   geom_point(aes(temp, rh, color = region)) + 
   labs(title = "Weather Station Data") + 
   labs(x = expression("Temperature"*~degree*C), y = "Relative Humidity")+
@@ -753,7 +753,7 @@ ggplot(met_avg[!is.na(region)]) +
 ## Changing the Legend
 
 ```{r warning=FALSE, out.width='40%', message=FALSE}
-ggplot(met_avg[!is.na(region)]) +
+ggplot(met_avg[!is.na(met_avg$region), ]) +
   geom_point(aes(temp, rh, color = region)) + 
   labs(title = "Weather Station Data",x = expression("Temperature"*~degree*C), y = "Relative Humidity")+
   scale_color_manual(name="Region", labels=c("East", "West"), values=c("east"="lightblue", "west"="purple"))+
@@ -803,16 +803,23 @@ Rstudio has a variety of other great Cheatsheets.
 
 ## Maps with leaflet{.smaller}
 
-Let's create a map of monthly average temperatures at each of the weather stations and colour the points by a temperature gradient.
-We need to create a colour palette and we can add a legend.
+Let's create a map of monthly average temperatures at each of the weather stations and color the points by a temperature gradient.
+We need to create a color palette and we can add a legend.
 
 ```{r warning=FALSE, out.width='30%', message=FALSE}
 library(leaflet)
-met_avg2 <- met[,.(temp = mean(temp,na.rm=TRUE), lat = mean(lat), lon = mean(lon)),  by=c("USAFID")]
-met_avg2 <- met_avg2[!is.na(temp)]
+met_avg2 <- summarize(met,
+                      temp =     mean(temp, na.rm = TRUE),
+                      lat =      mean(lat, na.rm = TRUE),
+                      lon =      mean(lon, na.rm = TRUE),
+                      .by = c(USAFID))
+met_avg2 <- met_avg2[!is.na(met_avg2$temp), ]
 
 # Generating a color palette
 temp.pal <- colorNumeric(c('darkgreen','goldenrod','brown'), domain=met_avg2$temp)
+
+temp.pal(20)
+
 temp.pal
 ```
 
