--- a/website/labs/lab2.qmd
+++ b/website/labs/lab2.qmd
@@ -1,16 +1,15 @@
 ---
-title: "Lab 02 - GitHub"
-output: tufte::tufte_html
+title: "Lab 2 - GitHub"
 link-citations: true
 ---
 
 # Learning goals
 
-In this lab, you are expected to learn/put in practice the following skills:
+In this lab, you are expected to learn/practice the following skills:
 
 - Forking a repository on GitHub
-- Git workflow clone/commit/push
-- Using pull requests (PR)
+- Git workflow: clone/commit/push
+- Using pull requests (PRs)
 
 # Updating a single repo
 
@@ -29,7 +28,7 @@ We will be working with the repository [https://github.com/USCbiostats/PM566-who
 ## Step 1: Fork the project to create your own repo
 
 Not a term/command actually available in Git, forking is a feature available in
-Github (as in other services) that allows users to create copies of other people's
+GitHub (as in other services) that allows users to create copies of other people's
 projects to propose changes (i.e. make **pull requests**, i.e. "I have this
 great update for your project! Would you like to add it by *pulling it* into your
 repo?").
@@ -47,8 +46,12 @@ Once you "Fork" a project, GitHub will automatically:
 2. Set up a pipeline to generate pull requests for the original repository.
 
 
-Once you have a copy of the project in your account, you can procede by
-"downloading it" to your computer using the `git clone` command. You will need to copy the URL from **your version** of the repository, available under the "Code" button. For example, if
+Once you have a copy of the project in your account, you can proceed by
+"downloading it" to your computer. You can do this using either the command line (Terminal) or the GitHub Desktop app.
+
+### Command Line
+
+You can download your version of the `whoami` repository using the `git clone` command. You will need to copy the URL from **your version** of the repository, available under the "Code" button. For example, if
 your github user name is `statsnerd` and the repository name is `PM566-whoami`, you could use the following in your command line
 
 ```shell
@@ -66,6 +69,12 @@ git clone git@github.com:statsnerd/PM566-whoami.git
 This way you will get a copy of the repository in your local machine. Now, let's
 see how can we update the project!
 
+### GitHub Desktop
+
+Alternatively, you can open GitHub Desktop, click the Current Repository tab in the upper left, click the Add button, and select Clone Repository. 
+If you are signed in to your GitHub account, this should open a dialog box allowing you to search your existing repositories.
+Find your version of the `PM566-whoami` repo and Clone it.
+
 ## Step 2: Modifying the corresponding line
 
 If you got the correct copy, you should find a very simple repository with only
@@ -82,7 +91,7 @@ yourself, e.g. "I am from XYZ, I love doing ABC, ...".
 
 3. (optional) if you feel like it, add at the end of the line a picture
 of yourself (or avatar) using either html or markdown. This will require you
-to include the figure in the repo (if you are not linking a web fig).
+to include the figure in the `images` folder of the repo, unless you provide a link to a picture online.
 
 4. Commit the changes and push the changes to your repo using `git commit` and
 `git push`, e.g.
@@ -93,7 +102,9 @@ git commit -a -m "[A short but meaningful message]"
 git push
 ```
 
-You have now updated your online version of the `PM566-whoami` repo and are one step closer to make your first Pull Request. We will see how
+Or using the "Commit [n] file(s) to main" and "Push origin" buttons in GitHub Desktop.
+
+You have now updated **your** online version of the `PM566-whoami` repo and are one step closer to make your first Pull Request. We will see how
 that happens in the next part.
 
 
