--- a/website/syllabus.qmd
+++ b/website/syllabus.qmd
@@ -4,7 +4,7 @@ title: "Syllabus"
 
 ## PM 566: Introduction to Health Data Science 
 
-**Term**: Fall 2024
+**Term**: Fall 2025
 
 **Time**: Friday 9am - 12:55pm
 
@@ -15,6 +15,7 @@ title: "Syllabus"
 ## Course Overview
 
 This course serves as an introduction to data science with a focus on the acquisition and analysis of real-life data. Students will learn the tools needed to:
+
 1. Create usable and reproducible datasets by accessing, scraping, and cleaning data
 2. Conduct exploratory data analysis and visualization
 3. Identify scientific questions that can be answered with a given dataset
@@ -37,11 +38,11 @@ Through this course, students will become familiar with the techniques used in d
 
 ## Course Slides
 
-Lecture slides presented in class are available on the course website.
+Lecture slides presented in class are available on the course website: [https://uscbiostats.github.io/PM566/](https://uscbiostats.github.io/PM566/).
 
 ## Technological Proficiency and Hardware/Software Required 
 
-The R language (http://cran.r-project.org) will be used throughout the semester and we recommend using the R Studio IDE for coding (https://posit.co/download/rstudio-desktop/). Additionally, if they do not already have one, students will be required to create a GitHub account (https://github.com/).
+The R language ([http://cran.r-project.org](http://cran.r-project.org)) will be used throughout the semester and we recommend using the R Studio IDE for coding ([https://posit.co/download/rstudio-desktop/](https://posit.co/download/rstudio-desktop/)). Additionally, if they do not already have one, students will be required to create a GitHub account ([https://github.com/](https://github.com/)).
 
 ## Readings and Supplementary Materials
 
@@ -49,40 +50,44 @@ There are no required readings for this course.
 
 ## Supplementary References
 
-1. - R Programming for Data Science, 2019. Roger Peng. https://bookdown.org/rdpeng/rprogdatascience/
-1. R for Data Science, 2017. Garrett Grolemund and Hadley Wickham. http://r4ds.had.co.nz/
-1. Exploratory Data Analysis with R, 2020. Roger Peng. https://bookdown.org/rdpeng/exdata/
-1. Mastering Software Development in R, 2017. Roger Peng, Sean Kross, Brooke Anderson. https://bookdown.org/rdpeng/RProgDA/
-1. R Packages, 2023. Hadley Wickham and Jennifer Bryan. https://r-pkgs.org/
-1. Modern Data Science with R, 2023. Benjamin S. Baumer, Daniel T. Kaplan, and Nicholas J. Horton. https://mdsr-book.github.io/mdsr3e/
+1. R Programming for Data Science, 2019. Roger Peng. [https://bookdown.org/rdpeng/rprogdatascience/](https://bookdown.org/rdpeng/rprogdatascience/)
+1. R for Data Science, 2017. Garrett Grolemund and Hadley Wickham. [http://r4ds.had.co.nz/](http://r4ds.had.co.nz/)
+1. Exploratory Data Analysis with R, 2020. Roger Peng. [https://bookdown.org/rdpeng/exdata/](https://bookdown.org/rdpeng/exdata/)
+1. Mastering Software Development in R, 2017. Roger Peng, Sean Kross, Brooke Anderson. [https://bookdown.org/rdpeng/RProgDA/](https://bookdown.org/rdpeng/RProgDA/)
+1. R Packages, 2023. Hadley Wickham and Jennifer Bryan. [https://r-pkgs.org/](https://r-pkgs.org/)
+1. Modern Data Science with R, 2023. Benjamin S. Baumer, Daniel T. Kaplan, and Nicholas J. Horton. [https://mdsr-book.github.io/mdsr3e/](https://mdsr-book.github.io/mdsr3e/)
 
 ## Description and Assessment of Assignments
 
-**Assignments:** There will be 5 assignments given throughout the semester, approximately 1 every 2 weeks. Students may discuss the problems with one another, however, individual solutions must be submitted and copying will not be tolerated. All assignments must be completed in Quarto or R Markdown, and submitted through the Github classes portal of the course. Late assignments will be penalized by 20% for each day past the due date.
-
-**Final Project:** The final project will be to write a report for an analysis applied to a real-world dataset and to create a website that includes interactive visualizations to display the data and results. The source code, website files, and PDF report will be uploaded to GitHub.
-
 **Labs:** There will be weekly lab assignments which are graded for completion. Each week, there will be class time devoted to working on that week's lab. Completing the weekly labs will count as part of the overall grade.
+
+**Homework:** There will be 4 assignments given throughout the semester, approximately every 2 weeks. Students may discuss the problems with one another, however, individual solutions must be submitted and copying will not be tolerated.
+
+Students may earn extra credit on Homework by submitting their own data visualization for the weekly Tidy Tuesday dataset presented in class. Each week, a student can earn 5 points of extra credit, up to a total of 50 for the semester (equivalent to half of one homework assignment).
+
+**Midterm Project:** The midterm project will be to perform a thorough exploratory analysis and write a report with preliminary findings using a real-world dataset of your choosing. The source code and PDF report will be uploaded to GitHub.
+
+**Final Project:** The final project will be to write a report for an analysis applied to a real-world dataset of your choosing and to create a website that includes interactive visualizations to display the data and results. The source code, website files, and PDF report will be uploaded to GitHub.
 
 ## Grading Breakdown
 
 | Assignment           | % of Grade |
 |----------------------|------------|
-| Labs                 | 20%        |
-| Homework (5)         | 30%        |
-| Midterm Exam         | 20%        |
-| Final Project        | 30%        |
+| Labs                 | 10%        |
+| Homework (4)         | 30%        |
+| Midterm Project      | 25%        |
+| Final Project        | 35%        |
 | TOTAL                | 100%       |
 
 ## Assignment Submission Policy
 
-///////////////////////////////////////////
-Assignments shall be submitted on the Github classroom portal of the course. Late homework assignments will not be accepted without penalty, except when verifiable extenuating circumstances can be demonstrated.
+All assignments must be completed in Quarto (or R Markdown) and submitted through the [GitHub Issues page](https://github.com/USCbiostats/PM566/issues) for the course. Late assignments will be penalized by 20% for each day past the due date, up to 5 days late, except when verifiable extenuating circumstances can be demonstrated.
+
+
 
 ## Schedule
 
-As the weeks go by, consult the [Schedule Page](/PM566/schedule/) for more information on weekly topics, problem sets, readings, and other materials. The schedule is likely to change as we go. Links to readings, assignments, and other materials from class will be posted on that page. 
-
+As the weeks go by, consult the [Schedule Page](schedule.qmd) for more information on weekly topics, problem sets, readings, and other materials. The schedule is likely to change as we go. Links to readings, assignments, and other materials from class will be posted on that page. 
 
 ## Academic Integrity
 
@@ -109,52 +114,52 @@ USC welcomes students with disabilities into all of the University’s education
 ## Support Systems:
 
 *Counseling and Mental Health - (213) 740-9355 – 24/7 on call*  
-https://studenthealth.usc.edu/counseling/   
+[https://studenthealth.usc.edu/counseling/](https://studenthealth.usc.edu/counseling/)   
 Free and confidential mental health treatment for students, including short-term psychotherapy, group counseling, stress fitness workshops, and crisis intervention. 
 
 *National Suicide Prevention Lifeline - dial 988 – 24/7 on call*   
-http://www.suicidepreventionlifeline.org  
+[http://www.suicidepreventionlifeline.org](http://www.suicidepreventionlifeline.org)  
 Provides free and confidential emotional support to people in suicidal crisis or emotional distress 24 hours a day, 7 days a week. 
 
 *Relationship and Sexual Violence Prevention Services (RSVP) - (213) 740-9355(WELL), press “0” after hours – 24/7 on call*  
-https://studenthealth.usc.edu/sexual-assault  
+[https://studenthealth.usc.edu/sexual-assault](https://studenthealth.usc.edu/sexual-assault)  
 Free and confidential therapy services, workshops, and training for situations related to gender-based harm. 
 
 *Office for Equity, Equal Opportunity, and Title IX (EEO-TIX) - (213) 740-5086*  
-http://eeotix.usc.edu  
+[http://eeotix.usc.edu](http://eeotix.usc.edu)  
 Information about how to get help or help someone affected by harassment or discrimination, rights of protected classes, reporting options, and additional resources for students, faculty, staff, visitors, and applicants. 
 
 *Reporting Incidents of Bias or Harassment - (213) 740-5086 or (213) 821-8298*  
-http://usc-advocate.symplicity.com/care_report  
+[http://usc-advocate.symplicity.com/care_report](http://usc-advocate.symplicity.com/care_report)  
 Avenue to report incidents of bias, hate crimes, and microaggressions to the Office for Equity, Equal Opportunity, and Title for appropriate investigation, supportive measures, and response.
 
 *The Office of Student Accessibility Services (OSAS) - (213) 740-0776*  
-http://osas.usc.edu  
+[http://osas.usc.edu](http://osas.usc.edu)  
 OSAS ensures equal access for students with disabilities through providing academic accommodations and auxiliary aids in accordance with federal laws and university policy.
 
 *USC Campus Support and Intervention - (213) 821-4710*   
-http://campussupport.usc.edu  
+[http://campussupport.usc.edu](http://campussupport.usc.edu)  
 Assists students and families in resolving complex personal, financial, and academic issues adversely affecting their success as a student.
 
 *Diversity, Equity and Inclusion - (213) 740-2101*  
-http://diversity.usc.edu  
+[http://diversity.usc.edu](http://diversity.usc.edu)  
 Information on events, programs and training, the Provost’s Diversity and Inclusion Council, Diversity Liaisons for each academic school, chronology, participation, and various resources for students. 
 
 
 *USC Emergency - UPC: (213) 740-4321, HSC: (323) 442-1000 – 24/7 on call*   
-http://dps.usc.edu, http://emergency.usc.edu  
+[http://dps.usc.edu, http://emergency.usc.edu](http://dps.usc.edu, http://emergency.usc.edu)  
 Emergency assistance and avenue to report a crime. Latest updates regarding safety, including ways in which instruction will be continued if an officially declared emergency makes travel to campus infeasible.
 
 *USC Department of Public Safety - UPC: (213) 740-6000, HSC: (323) 442-1200 – 24/7 on call*   
-http://dps.usc.edu  
+[http://dps.usc.edu](http://dps.usc.edu)  
 Non-emergency assistance or information.
 
 *Office of the Ombuds - (213) 821-9556 (UPC) / (323-442-0382 (HSC)*  
-http://ombuds.usc.edu    
+[http://ombuds.usc.edu](http://ombuds.usc.edu)    
 A safe and confidential place to share your USC-related issues with a University Ombuds who will work with you to explore options or paths to manage your concern.
 
 *Occupational Therapy Faculty Practice - (323) 442-3340* or   
-otfp@med.usc.edu, http://chan.usc.edu/otfp   
+otfp@med.usc.edu, [http://chan.usc.edu/otfp](http://chan.usc.edu/otfp)   
 Confidential Lifestyle Redesign services for USC students to support health promoting habits and routines that enhance quality of life and academic performance. 
 
 
